src/objects/T_Actual__c.object
<CustomObject>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <label>Action Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Weather</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Action Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In The Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrived At Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walked Out From Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Scheduled_Entity__c</fullName>
        <label>T_Scheduled_Entity</label>
        <referenceTo>T_Schedule_Detail__c</referenceTo>
        <relationshipLabel>T_Actuals</relationshipLabel>
        <relationshipName>T_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>T_Actual</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>